--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=OrionOpsDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=LONEWOLF\\SQLSERVER2022DEV;Database=OrionOpsDb;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
